--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -8,8 +8,10 @@
 </h2>
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/CreateJobOrder.js")" type="text/javascript"></script>
 @* =============== timepicker *@
-<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
+@*<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />*@
+@*<script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>*@
+<link href="@Url.Content("~/Content/timepicker/jquery.timepicker.css")" rel="stylesheet" type="text/css" />
+<script src="@Url.Content("~/Scripts/timepicker/jquery.timepicker.js")" type="text/javascript"></script>
 @* =============== Pager *@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
@@ -474,7 +476,7 @@
                                                                 <td @*class="hidecolumn"*@>
                                                                     <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                                 </td>
-                                                                <td><input type="text" id="txtName" name="FName" class="FName" />
+                                                                <td><input type="text" id="txtFName" name="txtFName" class="FName" />
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
@@ -483,10 +485,10 @@
                                                                     <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="datepicker4" class="dtDate text-size100" />
+                                                                    <input type="text" id="txtManDate" class="ManDate text-size100" />
                                                                 </td>
                                                                 <td>
-                                                                    <select class="select-size50">
+                                                                    <select class="ManDay select-size50">
                                                                         <option value="0">อา</option>
                                                                         <option value="1">จ</option>
                                                                         <option value="2">อ</option>
@@ -497,25 +499,25 @@
                                                                     </select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
+                                                                    <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
+                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
+                                                                    <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
+                                                                    <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
+                                                                    <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
+                                                                    <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
                                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -535,7 +537,7 @@
                                                                     <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtName" name="txtName" class="FName"/>
+                                                                    <input type="text" id="txtFName" name="txtFName" class="FName"/>
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
@@ -544,10 +546,10 @@
                                                                     <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="datepicker5" class="dtDate text-size100" />
+                                                                    <input type="text" id="txtManDate" class="ManDate text-size100" />
                                                                 </td>
                                                                 <td>
-                                                                    <select class="select-size50">
+                                                                    <select class="ManDay select-size50">
                                                                         <option value="0">อา</option>
                                                                         <option value="1">จ</option>
                                                                         <option value="2">อ</option>
@@ -558,25 +560,25 @@
                                                                     </select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
+                                                                    <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter" >
+                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter" >
+                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
+                                                                    <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
+                                                                    <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
+                                                                    <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
+                                                                    <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
                                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
