--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -6,8 +6,10 @@
     JobOrder Edit
 </h2>
 @* =============== timepicker *@
-<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
+@*<link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />*@
+@*<script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>*@
+<link href="@Url.Content("~/Content/timepicker/jquery.timepicker.css")" rel="stylesheet" type="text/css" />
+<script src="@Url.Content("~/Scripts/timepicker/jquery.timepicker.js")" type="text/javascript"></script>
 @* =============== Pager *@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/IndexJobOrderBorrow.js")" type="text/javascript"></script>
@@ -468,10 +470,10 @@
                                                             <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="datepicker5" class="dtDate text-size100" />
+                                                            <input type="date" id="txtManDate" class="ManDate text-size100" />
                                                         </td>
                                                         <td>
-                                                            <select class="select-size50">
+                                                            <select class="ManDay select-size50">
                                                                 <option value="1">อา</option>
                                                                 <option value="2">จ</option>
                                                                 <option value="3">อ</option>
@@ -482,25 +484,25 @@
                                                             </select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
+                                                            <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
-                                                            <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
+                                                            <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
+                                                            <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
+                                                            <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
+                                                            <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -535,10 +537,10 @@
                                                             <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="datepicker5" class="dtDate text-size100" />
+                                                            <input type="date" id="txtManDate" class="ManDate text-size100" />
                                                         </td>
                                                         <td>
-                                                            <select class="select-size50">
+                                                            <select class="ManDay select-size50">
                                                                 <option value="1">อา</option>
                                                                 <option value="2">จ</option>
                                                                 <option value="3">อ</option>
@@ -549,25 +551,25 @@
                                                             </select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
+                                                            <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                         </td>
                                                         <td>
-                                                            <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
+                                                            <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
+                                                            <input id="txtManNormal" type="text" value="" class="ManNormal text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
+                                                            <input id="txtManPremium" type="text" value="" class="ManPremium text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
+                                                            <input id="txtManSpecial" type="text" value="" class="ManSpecial text-size110 textcenter" />
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -884,14 +886,16 @@
     </form>
 }
 <script type="text/javascript">
+    
     $(document).ready(function () {
         var input = window.location.href;
         var after = input.split('?')[1]
         var val = after.split('=');
         var Isview = val[2];
-        alert(Isview);
+
         ControlEnable(Isview);
-        alert(@Request.Params["id"]);
+        SetRowCal5();
+             
         GetData(@Request.Params["id"]);
         GetJobOrderBorrow(@Request.Params["id"]);
         
